--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </script>
 
-    <link rel="import" href="/src/my-app.html">
+    <link rel="import" href="src/my-app.html">
     <link rel="import" href="https://polygit.org/components/paper-header-panel/paper-header-panel.html">
     <link rel="import" href="https://polygit.org/components/paper-styles/paper-styles.html">
 
