extending polymer components

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -77,12 +77,12 @@
     <p>Customization of paper-button to paper-me-button, overloading styles with a diferent background and border-radius:</p>
 
     Using:
-    <pre><code id="code2" class="html">
+    <pre><code id="code4" class="html">
 &lt;paper-me-local-button&gt;&lt;iron-icon icon=&quot;check&quot;&gt;&lt;/iron-icon&gt;link&lt;/paper-me-local-button&gt;
     </code></pre></p>
 
     Local customization of paper-me-button to paper-me-local-button, overloading styles with a diferent background and border-radius:
-    <p><pre><code id="code3" class="html">
+    <p><pre><code id="code5" class="html">
       &lt;link rel=&quot;import&quot; href=&quot;https://polygit.org/my-repo+my-organization+*/components/paper-me-local-button/paper-me-local-button.html&quot;&gt;
 
       &lt;dom-module id=&quot;paper-me-local-button&quot;&gt;
@@ -128,6 +128,8 @@
         hljs.highlightBlock(this.$.code1);
         hljs.highlightBlock(this.$.code2);
         hljs.highlightBlock(this.$.code3);
+        hljs.highlightBlock(this.$.code4);
+        hljs.highlightBlock(this.$.code5);
       }
     });
 
